# RustAnimations

./: Cargo.toml  README.md  REAMDE.md
src/: animations.rs  main.rs  usb_manager.rs
